--- a/x_paper_kit_v1.2.2/assets/css/ct-paper.css
+++ b/x_paper_kit_v1.2.2/assets/css/ct-paper.css
@@ -77,6 +77,10 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 
 .title-uppercase {
   text-transform: uppercase;
+  color:orangered
+}
+.word-color{
+  color:orangered
 }
 
 blockquote {
