--- a/x_paper_kit_v1.2.2/assets/css/ct-paper.css
+++ b/x_paper_kit_v1.2.2/assets/css/ct-paper.css
@@ -88,7 +88,7 @@ blockquote small {
 }
 
 .text-muted {
-  color: #DDDDDD;
+  color: #666699;
 }
 
 .text-primary, .text-primary:hover {
@@ -1427,7 +1427,7 @@ textarea.form-control {
 .section {
   padding: 30px 0;
   position: relative;
-  background-color: #f4f3ef;
+  background-color: #FFFFFF;
   background-image: linear-gradient(to bottom, transparent 0%, rgba(112, 112, 112, 0) 60%, rgba(186, 186, 186, 0.15) 100%);
 }
 
@@ -1468,7 +1468,7 @@ textarea.form-control {
 }
 
 .section-dark {
-  background-color: #1a1817;
+  background-color: #99CC99;
   color: #FFFFFF;
 }
 
