--- a/x_paper_kit_v1.2.2/bootstrap3/css/bootstrap.css
+++ b/x_paper_kit_v1.2.2/bootstrap3/css/bootstrap.css
@@ -1950,7 +1950,7 @@ pre code {
     width: 75%;
   }
   .col-md-8 {
-    width: 66.66666667%;
+    width: 75%;
   }
   .col-md-7 {
     width: 58.33333333%;
