--- a/x_paper_kit_v1.2.2/assets/css/ct-paper.css
+++ b/x_paper_kit_v1.2.2/assets/css/ct-paper.css
@@ -1472,7 +1472,7 @@ textarea.form-control {
 }
 
 .section-dark {
-  background-color: #99CC99;
+  background-color: #FFCC99;
   color: #FFFFFF;
 }
 
