--- a/x_paper_kit_v1.2.2/assets/css/ct-paper.css
+++ b/x_paper_kit_v1.2.2/assets/css/ct-paper.css
@@ -1473,7 +1473,7 @@ textarea.form-control {
 }
 
 .section-dark {
-  background-color: #FFCC99;
+  background-color: #FF9966;
   color: #FFFFFF;
 }
 
