--- a/x_paper_kit_v1.2.2/assets/css/ct-paper.css
+++ b/x_paper_kit_v1.2.2/assets/css/ct-paper.css
@@ -84,6 +84,10 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
   color:orangered
 }
 
+.abc{
+  display: inline-block;
+}
+
 blockquote {
   font-style: italic;
 }
