--- a/x_paper_kit_v1.2.2/assets/css/ct-paper.css
+++ b/x_paper_kit_v1.2.2/assets/css/ct-paper.css
@@ -287,11 +287,11 @@ input.ct-red + span + label + span.switch-right {
   box-sizing: border-box;
   border-width: 2px;
   background-color: transparent;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
   padding: 7px 18px;
   border-color: #66615B;
-  color: #66615B;
+  color: #FFFFFF;
   -webkit-transition: all 150ms linear;
   -moz-transition: all 150ms linear;
   -o-transition: all 150ms linear;
